--- a/META.yml
+++ b/META.yml
@@ -4,10 +4,12 @@ author:
   - 'Klaus Ita'
 build_requires:
   Test::More: 0
+  Test::NoWarnings: 0
   Test::Pod: 0
   Test::Pod::Coverage: 0
+  Test::Warn: 0
 distribution_type: module
-generated_by: 'Module::Install version 0.72'
+generated_by: 'Module::Install version 0.75'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
@@ -22,4 +24,4 @@ requires:
   Class::Data::Inheritable: 0
   List::Util: 0
   perl: 5.10.0
-version: 1.01
+version: 1.02
