--- a/META.yml
+++ b/META.yml
@@ -9,11 +9,11 @@ build_requires:
   Test::Pod::Coverage: 0
   Test::Warn: 0
 distribution_type: module
-generated_by: 'Module::Install version 0.75'
+generated_by: 'Module::Install version 0.77'
 license: perl
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: Bitmask-Data
 no_index:
   directory:
@@ -23,5 +23,7 @@ requires:
   Carp: 0
   Class::Data::Inheritable: 0
   List::Util: 0
-  perl: 5.10.0
-version: 1.03
+  perl: 5.01
+resources:
+  license: http://dev.perl.org/licenses/
+version: 1.05
