--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,16 @@
 ---
-abstract: 'Handle bitmasks in an easy and flexible way'
+abstract: 'Handle unlimited length bitmasks in an easy and flexible way'
 author:
   - 'Klaus Ita'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
   Test::Warn: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.77'
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,11 +20,14 @@ no_index:
   directory:
     - inc
     - t
+    - xt
 requires:
   Carp: 0
   Class::Data::Inheritable: 0
   List::Util: 0
-  perl: 5.01
+  Math::BigInt: 0
+  Scalar::Util: 0
+  perl: 5.10.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.06
+version: 2.000
