Import of MAROS/Bitmask-Data-2.01 from CPAN.
gitpan-cpan-distribution: Bitmask-Data
gitpan-cpan-version:      2.01
gitpan-cpan-path:         MAROS/Bitmask-Data-2.01.tar.gz
gitpan-cpan-author:       MAROS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -27,7 +27,8 @@ requires:
   List::Util: 0
   Math::BigInt: 0
   Scalar::Util: 0
+  parent: 0
   perl: 5.10.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 2.000
+version: 2.010
