--- a/META.yml
+++ b/META.yml
@@ -10,7 +10,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.91'
+generated_by: 'Module::Install version 0.93'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -28,7 +28,8 @@ requires:
   Math::BigInt: 0
   Scalar::Util: 0
   parent: 0
-  perl: 5.10.0
+  perl: 5.10.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 2.020
+  repository: git://github.com/maros/Bitmask-Data.git
+version: 2.030
